objects/Person_Examination_Error__c.object
<CustomObject>
    <fields>
        <fullName>Error_Details_Extra__c</fullName>
        <label>Error Details Extra</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentRecordId__c</fullName>
        <description>This field is used to store the record id of the any parent record that caused error, while processing the record</description>
        <label>ParentRecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_URL__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ParentRecordId__c , &quot;Click here to navigate to Record&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record URL</label>
        <type>Text</type>
    </fields>
    <label>Person Examination Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-Error-{000}</displayFormat>
        <label>Person Examination Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Examination Error</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>